--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,6 +2,7 @@
   background-color:#f4f4f4;
   overflow:hidden;
   height:63px;
+  margin-bottom: 0px;
   .navbar {
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
@@ -66,7 +67,6 @@
 
 #main{
   transition:margin-left 0.5s;
-  padding:20px;
   overflow:hidden;
   width:100%;
 }
