--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
   <span class="open-slide">
-    <a href="#" onclick="openSlideMenu()">
+    <a onclick="openSlideMenu()">
       <svg width="30" height="30">
           <path d="M0,5 30,5" stroke="#151719" stroke-width="5"/>
           <path d="M0,14 30,14" stroke="#151719" stroke-width="5"/>
@@ -10,12 +10,13 @@
   </span>
 </nav>
 <div id="side-menu" class="side-nav">
-  <a href="#" class="btn-close" onclick="closeSlideMenu()">&times;</a>
-  <a href="#">Home</a>
-  <a href="#">Seam Carving</a>
+  <a class="btn-close" onclick="closeSlideMenu()">&times;</a>
+  <a routerLink="home">Home</a>
+  <a routerLink="seamcarving">Seam Carving</a>
   <a href="#">Letter Recognition</a>
+  <a routerLink="credits">Credits</a>
 </div>
 
 <div id="main">
-  <app-seamcarving></app-seamcarving>
+      <router-outlet></router-outlet>
 </div>
