4th commit : fixed the energy calculation

--- a/src/app/seamcarving/seamcarving.component.html
+++ b/src/app/seamcarving/seamcarving.component.html
@@ -19,8 +19,7 @@
   <ngb-tabset activeId="'preprocess'" [destroyOnHide]="false">
    <ngb-tab id="preprocess" title="Pre-process">
      <ng-template ngbTabContent>
-       <canvas id="picture_holder_1">
-       </canvas>
+       <img id="picture_holder_1">
      </ng-template>
    </ngb-tab>
    <ngb-tab title="Process details" id="processdetail" [disabled]="!isDone">
