--- a/src/app/seamcarving/seamcarving.component.css
+++ b/src/app/seamcarving/seamcarving.component.css
@@ -20,7 +20,8 @@
 }
 
 #picture_holder_1 {
-  background: url('/assets/images/seam/1.jpg') no-repeat;
+  background-image: url('/assets/images/seam/1.jpg');
+  background-repeat: no-repeat;
   background-size: cover;
 
 }
