5th commit : added a first glimpse of the beam calculation
Added the calculation of the energy paths + tried to use a Map to represent the edges : to fix !

--- a/src/app/seamcarving/seamcarving.component.html
+++ b/src/app/seamcarving/seamcarving.component.html
@@ -19,7 +19,8 @@
   <ngb-tabset activeId="'preprocess'" [destroyOnHide]="false">
    <ngb-tab id="preprocess" title="Pre-process">
      <ng-template ngbTabContent>
-       <img id="picture_holder_1">
+       <canvas id="picture_holder_1">
+       </canvas>
      </ng-template>
    </ngb-tab>
    <ngb-tab title="Process details" id="processdetail" [disabled]="!isDone">
