10th commit : Added a bit of documentation, to complete, about the project

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
 </nav>
 <div id="side-menu" class="side-nav">
   <a class="btn-close" onclick="closeSlideMenu()">&times;</a>
-  <a routerLink="home">Home</a>
+  <a routerLink="">Home</a>
   <a routerLink="seamcarving">Seam Carving</a>
   <a href="#">Letter Recognition</a>
   <a routerLink="credits">Credits</a>
