--- a/src/app/seamcarving/seamcarving.component.html
+++ b/src/app/seamcarving/seamcarving.component.html
@@ -5,7 +5,7 @@
   <div class="card card-default">
    <div class="card-header header">
          <button id="play" class="btn btn-outline-secondary" (click)="launchCarving();"><img src="/assets/images/seam/play-button.png" id="img-play"></button>
-         <h2 id="carving-title">Seam Carving {{ progress }}</h2>
+         <h2 id="carving-title">Seam Carving</h2>
    </div>
    <div class="card-body">
      <h3 class="card-title">Concept</h3>
