--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,11 +3,6 @@
   overflow:hidden;
   height:63px;
   margin-bottom: 0px;
-  .navbar {
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    border-radius: 0;
-  }
 }
 
 .navbar a{
@@ -34,7 +29,7 @@
   height:100%;
   width:0;
   position:fixed;
-  z-index:1;
+  z-index:9999;
   top:0;
   left:0;
   background-color:#111;
@@ -42,6 +37,7 @@
   overflow-x:hidden;
   padding-top:60px;
   transition:0.5s;
+  
 }
 
 .side-nav a{
@@ -77,4 +73,8 @@
 
 @media(min-width:568px){
   /*.open-slide{display:none}*/
+}
+
+.clickable {
+  cursor: pointer;
 }
