--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
   <span class="open-slide">
-    <a onclick="openSlideMenu()">
+    <a class="clickable" onclick="openSlideMenu()">
       <svg width="30" height="30">
           <path d="M0,5 30,5" stroke="#151719" stroke-width="5"/>
           <path d="M0,14 30,14" stroke="#151719" stroke-width="5"/>
@@ -10,7 +10,7 @@
   </span>
 </nav>
 <div id="side-menu" class="side-nav">
-  <a class="btn-close" onclick="closeSlideMenu()">&times;</a>
+  <a class="btn-close clickable" onclick="closeSlideMenu()">&times;</a>
   <a routerLink="">Home</a>
   <a routerLink="seamcarving">Seam Carving</a>
   <a href="#">Letter Recognition</a>
