--- a/src/app/credits/credits.component.html
+++ b/src/app/credits/credits.component.html
@@ -11,6 +11,40 @@
 </div>
 
 <div class="container">
+  <div class="card"  id="favicon">
+    <img class="card-img-top credit-image" src="/assets/images/seam/pixelated.png" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">
+        <div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> </div>        </h5>
+
+        <div class="card-text">is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+    <div class="card"  id="linkedin-icon">
+      <img class="card-img-top credit-image" src="/assets/images/seam/linkedin-logo-huge.png" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">
+            <div>Icons made by <a href="https://www.flaticon.com/authors/simpleicon" title="SimpleIcon">SimpleIcon</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></h5>
+          <div class="card-text"> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+      </div>
+    </div>
+  </div>
+
+<div class="container">
+  <div class="card"  id="github-icon">
+    <img class="card-img-top credit-image" src="/assets/images/seam/github-logo-huge.png" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">
+          <div>Icons made by <a href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave Gandy</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></h5>
+        <div class="card-text"> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
   <div class="card"  id="logo_stack">
     <img class="card-img-top credit-image" src="/assets/images/seam/logo-stack.png" alt="Card image cap">
     <div class="card-body">
