--- a/src/app/seamcarving/seamcarving.component.html
+++ b/src/app/seamcarving/seamcarving.component.html
@@ -1,6 +1,7 @@
 <div id="to_center" class="container">
   <div class="header">
-
+    <a target="_blank" rel="noopener noreferrer" href="https://github.com/dimartinot/imageprocessing"><img src="/assets/images/seam/github-logo.png" id="github-icon"></a>
+    <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/thomas-di-martino/"><img src="/assets/images/seam/linkedin-logo.png" id="linkedin-icon"></a>
   </div>
   <div class="card card-default">
    <div class="card-header header">
